tests/machine/x/ocaml/outer_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/outer_join.ml", line 59, characters 87-94:
59 |               print_endline (__show ("Order") ^ " " ^ __show (Obj.obj (List.assoc "id" Obj.obj (List.assoc "order" row))) ^ " " ^ __show ("by") ^ " " ^ __show (Obj.obj (List.assoc "name" Obj.obj (List.assoc "customer" row))) ^ " " ^ __show ("- $") ^ " " ^ __show (Obj.obj (List.assoc "total" Obj.obj (List.assoc "order" row))));
                                                                                            ^^^^^^^
Error: This expression has type Obj.t -> 'a
       but an expression was expected of type (string * ('b -> 'c)) list


Context (around line 59):
  57 |           if Obj.obj (List.assoc "order" row) then (
  58 |             if Obj.obj (List.assoc "customer" row) then (
  59 |               print_endline (__show ("Order") ^ " " ^ __show (Obj.obj (List.assoc "id" Obj.obj (List.assoc "order" row))) ^ " " ^ __show ("by") ^ " " ^ __show (Obj.obj (List.assoc "name" Obj.obj (List.assoc "customer" row))) ^ " " ^ __show ("- $") ^ " " ^ __show (Obj.obj (List.assoc "total" Obj.obj (List.assoc "order" row))));
  60 |             ) else (
  61 |               print_endline (__show ("Order") ^ " " ^ __show (Obj.obj (List.assoc "id" Obj.obj (List.assoc "order" row))) ^ " " ^ __show ("by") ^ " " ^ __show ("Unknown") ^ " " ^ __show ("- $") ^ " " ^ __show (Obj.obj (List.assoc "total" Obj.obj (List.assoc "order" row))));
